--- a/config/config.ini
+++ b/config/config.ini
@@ -1,11 +1,14 @@
+## config.ini
+
 [dir_info]
-dir_root = '/Users/ma/Downloads/'
+dir_root = /Users/ma/Downloads/
+## offset
 offset = 10000
 
 [db_info]
-engine = 'mysql'
-host = '192.168.0.64'
-port = '3306'
-user = 'root'
-password = '123123'
-db = 'mmanager'
+engine = mysql
+host = 192.168.0.64
+port = 3306
+user = root
+password = 123123
+db_name = mmanager
