--- a/config/config.ini
+++ b/config/config.ini
@@ -2,8 +2,8 @@
 
 [dir_info]
 dir_root = /Users/ma/Downloads/
-## offset
-offset = 10000
+## lines_per_page
+lines_per_page = 100
 
 [db_info]
 engine = mysql
