--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,5 +1,4 @@
 [uwsgi]
-
 http = 0.0.0.0:8000
 chdir = /opt/mmanager
 master = true
@@ -8,3 +7,6 @@ listen = 120
 vacuum = true
 module = mmanager.wsgi
 daemonize = /var/log/uwsgi.log
+
+# start command
+# uwsgi --ini /opt/mmanager/uwsgi.ini
