服务器列表页面添加分页，管理员重置密码

--- a/config/config.ini
+++ b/config/config.ini
@@ -5,6 +5,9 @@ dir_root = /Users/ma/Downloads/
 ## lines_per_page
 lines_per_page = 100
 
+[page_info]
+page_size_default = 10
+
 [db_info]
 engine = mysql
 host = 192.168.0.64
