uwsgi.ini 添加static目录配置

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -6,6 +6,7 @@ processes = 2
 listen = 120
 vacuum = true
 module = mmanager.wsgi
+static-map = /static=static
 daemonize = /var/log/uwsgi.log
 
 # start command
