对存储在数据库中的服务器密码进行加密处理

--- a/config/config.ini
+++ b/config/config.ini
@@ -15,3 +15,6 @@ port = 3306
 user = root
 password = 123123
 db_name = mmanager
+
+[secret_info]
+key_data_encrypter = maxdSNxI_bHsKomtjGcJJWpHYbHdKQYh3Y_tygwZ_QM=
