修改数据库为sqlite3，修复没有添加任何服务器时显示错误bug

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,8 @@
 ## config.ini
 
 [dir_info]
-dir_root = /Users/ma/Downloads/
+dir_root = C:\Users\maxd\Downloads
+#dir_root = /Users/maxd/Downloads/
 ## lines_per_page
 lines_per_page = 100
 
