filemanager由本地目录查看改为通过sftp远程查看

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,10 +1,10 @@
 ## config.ini
 
-[dir_info]
-dir_root = C:\Users\maxd\Downloads
-#dir_root = /Users/maxd/Downloads/
-## lines_per_page
-lines_per_page = 100
+[path_info]
+tmp_path = C:/Users/maxd/Downloads
+
+## lines_for_view
+lines_for_view = 10000
 
 [page_info]
 page_size_default = 10
