--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,17 @@ certifi==2019.6.16
 cffi==1.12.3
 chardet==3.0.4
 cryptography==2.7
-Django==2.1.3
-dwebsocket==0.5.10
+Django==2.2.5
+dwebsocket==0.5.11
 idna==2.8
+mysqlclient==1.4.4
 paramiko==2.6.0
 pycparser==2.19
+PyJWT==1.7.1
 PyMySQL==0.9.3
 PyNaCl==1.3.0
 pytz==2019.1
 requests==2.22.0
 six==1.12.0
+sqlparse==0.3.0
 urllib3==1.25.3
