--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,5 @@
-asn1crypto==0.24.0
-bcrypt==3.1.7
-certifi==2019.6.16
-cffi==1.12.3
-chardet==3.0.4
-cryptography==2.7
-Django==2.2.8
-dwebsocket==0.5.11
-idna==2.8
-mysqlclient==1.4.4
-paramiko==2.6.0
-pycparser==2.19
-PyJWT==1.7.1
-PyMySQL==0.9.3
-PyNaCl==1.3.0
-pytz==2019.1
+cryptography==2.8
+paramiko==2.7.2
+Django==3.1.4
+channels==3.0.2
 requests==2.22.0
-six==1.12.0
-sqlparse==0.3.0
-urllib3==1.25.3
