--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,12 +7,18 @@ on:
     branches: [ master ]
 
 jobs:
-
   build:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      runs-on: ubuntu-latest
+      name: Build image job
+      steps:
+          - name: Checkout master
+            uses: actions/checkout@master
+          - name: Build and publish image
+            uses: ilteoood/docker_buildx@master
+            with:
+              publish: true
+              imageName: raydoom/mmanager
+              platform: linux/amd64,linux/arm64 # 你准备构建的镜像平台
+              tag: latest # 默认latest，可以针对平台，修改tag
+              dockerHubUser: ${{ secrets.DOCKER_USERNAME }} # docker hub userid
+              dockerHubPassword: ${{ secrets.DOCKER_PASSWORD }} # docker hub password
