--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,5 +20,5 @@ jobs:
               imageName: raydoom/mmanager
               platform: linux/amd64,linux/arm64 # 你准备构建的镜像平台
               tag: latest # 默认latest，可以针对平台，修改tag
-              dockerHubUser: ${{ secrets.DOCKER_USERNAME }} # docker hub userid
-              dockerHubPassword: ${{ secrets.DOCKER_PASSWORD }} # docker hub password
+              dockerUser: ${{ secrets.DOCKER_USERNAME }} # docker hub userid
+              dockerPassword: ${{ secrets.DOCKER_PASSWORD }} # docker hub password
