--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,6 +19,6 @@ jobs:
               publish: true
               imageName: raydoom/mmanager
               platform: linux/amd64,linux/arm64 # 你准备构建的镜像平台
-              tag: latest # 默认latest，可以针对平台，修改tag
+              tag: latest,${{ github.sha }} # 默认latest，可以针对平台，修改tag
               dockerUser: ${{ secrets.DOCKER_USERNAME }} # docker hub userid
               dockerPassword: ${{ secrets.DOCKER_PASSWORD }} # docker hub password
